build_log.txt
gcc -Wall -Wextra -std=c11 -O2 -c src/stdlib_fs.c -o build/stdlib_fs.o
src/stdlib_fs.c: In function ‘native_fs_rmdir’:
src/stdlib_fs.c:90:15: error: implicit declaration of function ‘rmdir’ [-Wimplicit-function-declaration]
   90 |     int res = rmdir(args[0].string_val);
      |               ^~~~~
make: *** [Makefile:24: build/stdlib_fs.o] Error 1
